src/objects/Lead_Scan__c.object
<CustomObject>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Lead_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scan_Time__c</fullName>
        <label>Scan Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scanee_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Scanee User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipName>Lead_Scans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scanner_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scanner Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Lead_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scanner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scanner User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipName>Lead_Scans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street1__c</fullName>
        <label>Street1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <label>Street2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <label>BLN Lead Scan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LS-{00000000}</displayFormat>
        <label>Lead Scan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Lead Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>